--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://hilltongame.com/main.html/",
+  "url": "https://t.me/HillTON_Game_bot",
   "name": "HillTON P2E Game",
   "iconUrl": "https://hilltongame.com/icon.png"
 }
