--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://hilltongame.com/main.html/",
-  "name": "HillTON P2E Game",
-  "iconUrl": "https://hilltongame.com/icon.png"
+  "url": "https://durevgame.com",
+  "name": "Durev Povel P2E Game",
+  "iconUrl": "https://durevgame.com/avatar.png"
 }
