--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://durevgame.com",
-  "name": "Durev Povel P2E Game",
+  "name": "Durev Povel",
   "iconUrl": "https://durevgame.com/avatar.png"
 }
