--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://durevgame.com",
-  "name": "Durev Povel",
-  "iconUrl": "https://durevgame.com/avatar.png"
+  "url": "https://questszone.io",
+  "name": "QUESTSZONE",
+  "iconUrl": "https://questszone.io/questszone-rectangle.jpg"
 }
