--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://questszone.io",
   "name": "QUESTSZONE",
-  "iconUrl": "https://questszone.io/questszone-rectangle.jpg"
+  "iconUrl": "https://i.ibb.co/GTDyrQN/questszone-rectangle.jpg"
 }
